# go2_deploy

./: .gitignore  CMakeLists.txt  README.md
include/: cfg.hpp  gamepad.hpp  robot_controller.hpp  robot_interface.hpp  state_machine.hpp  user_controller.hpp
include/common/: mathTools.h
include/param/: cfg.hpp
include/unitree/common/: csv_writer.hpp
models/: Aug24_14-41-49_step_gaitpolicy_1.pt  Aug24_18-59-18_step_gait.pt  Jan05_09-43-56_simple_rl_genesis.pt  Jul25_09-35-32_step_gait.pt  Sep11_23-28-50_step_gait.pt  Sep18_11-52-31_gym_encoder.pt  Sep18_11-52-31_gym_policy.pt  Sep28_17-01-19_gs_encoder.pt  Sep28_17-01-19_gs_policy.pt  ts_encoder.pt  ts_policy.pt
params/: params.json  rl_params.json  simple_rl_config.yaml  ts_config.yaml  wtw_config.yaml
src/: main.cpp
